2013-03-15	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Initial version